// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`variant IPC handlers > getFilterOptions (variants:filterOptions) - IPC payload structure > returns available filter options structure (snapshot) 1`] = `
{
  "clinvars": [
    "Benign",
    "Pathogenic",
  ],
  "consequences": [
    "HIGH",
    "MODERATE",
  ],
  "funcs": [
    "missense_variant",
    "synonymous_variant",
  ],
  "maxCadd": 25,
  "maxGnomadAf": 0.5,
  "minCadd": 10,
  "minGnomadAf": 0.001,
}
`;

exports[`variant IPC handlers > getVariants (variants:query) - IPC payload structure > returns expected response structure (snapshot) 1`] = `
{
  "data": [
    {
      "aa_change": null,
      "alt": "G",
      "cadd": 25.5,
      "case_id": 1,
      "cdna": null,
      "chr": "1",
      "clinvar": "Pathogenic",
      "consequence": "HIGH",
      "func": "missense_variant",
      "gene_symbol": "BRCA1",
      "gnomad_af": 0.0001,
      "gt_num": "0/1",
      "hpo_match": null,
      "hpo_sim_score": null,
      "id": 1,
      "moi": null,
      "omim_mim_number": "113705",
      "pos": 12345,
      "qual": null,
      "ref": "A",
      "transcript": "ENST00000357654",
    },
    {
      "aa_change": null,
      "alt": "T",
      "cadd": null,
      "case_id": 1,
      "cdna": null,
      "chr": "2",
      "clinvar": null,
      "consequence": "MODERATE",
      "func": null,
      "gene_symbol": "TP53",
      "gnomad_af": 0.05,
      "gt_num": "0/1",
      "hpo_match": null,
      "hpo_sim_score": null,
      "id": 2,
      "moi": null,
      "omim_mim_number": null,
      "pos": 54321,
      "qual": null,
      "ref": "C",
      "transcript": null,
    },
    {
      "aa_change": null,
      "alt": "A",
      "cadd": null,
      "case_id": 1,
      "cdna": null,
      "chr": "3",
      "clinvar": null,
      "consequence": "LOW",
      "func": null,
      "gene_symbol": "EGFR",
      "gnomad_af": null,
      "gt_num": "0/1",
      "hpo_match": null,
      "hpo_sim_score": null,
      "id": 3,
      "moi": null,
      "omim_mim_number": null,
      "pos": 98765,
      "qual": null,
      "ref": "G",
      "transcript": null,
    },
  ],
  "total_count": 3,
}
`;

exports[`variant IPC handlers > searchVariants (variants:search) - IPC payload structure > returns search results with expected structure (snapshot) 1`] = `
[
  {
    "aa_change": null,
    "alt": "G",
    "cadd": null,
    "case_id": 1,
    "cdna": null,
    "chr": "1",
    "clinvar": null,
    "consequence": "HIGH",
    "func": null,
    "gene_symbol": "BRCA1",
    "gnomad_af": null,
    "gt_num": "0/1",
    "hpo_match": null,
    "hpo_sim_score": null,
    "id": 1,
    "moi": null,
    "omim_mim_number": null,
    "pos": 100,
    "qual": null,
    "ref": "A",
    "transcript": null,
  },
  {
    "aa_change": null,
    "alt": "T",
    "cadd": null,
    "case_id": 1,
    "cdna": null,
    "chr": "2",
    "clinvar": null,
    "consequence": "MODERATE",
    "func": null,
    "gene_symbol": "BRCA2",
    "gnomad_af": null,
    "gt_num": "0/1",
    "hpo_match": null,
    "hpo_sim_score": null,
    "id": 2,
    "moi": null,
    "omim_mim_number": null,
    "pos": 200,
    "qual": null,
    "ref": "C",
    "transcript": null,
  },
]
`;
